Fix keyboard shortcuts being wrapped
Setting $spacing-8 gap between the labels and the shortcuts

--- a/res/css/views/settings/tabs/user/_KeyboardUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_KeyboardUserSettingsTab.scss
@@ -16,9 +16,18 @@ limitations under the License.
 */
 
 .mx_KeyboardUserSettingsTab .mx_SettingsTab_section {
-    .mx_KeyboardShortcut_shortcutRow {
+    .mx_KeyboardShortcut_shortcutRow,
+    .mx_KeyboardShortcut {
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+
+    .mx_KeyboardShortcut_shortcutRow {
+        column-gap: $spacing-8;
+
+        .mx_KeyboardShortcut {
+            flex-wrap: nowrap;
+        }
     }
 }
